# libcrobj

./: CMakeLists.txt  README.md
include/: crobj_core.h  crobj_flex.h  crobj_grid.h  flex.h  grid.h  log.h  main.h  ui_core.h
include/widget/: crobj_widget_common.h  crobj_widget_menu.h
src/: align.c  border.c  creator.c  crobj_align.c  crobj_border.c  crobj_core.c  crobj_creator.c  crobj_mgr.c  crobj_padding.c  crobj_rotation.c  crobj_size.c  obj.c  padding.c  rotation.c  size.c  ui_init.c
src/layouts/: crobj_flex.c  crobj_grid.c  flex.c  grid.c
src/widget/: common.c  crobj_menu.c  crobj_widget_common.c  menu.c
